<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/llPopupState"
        android:layout_width="@dimen/list_token_width_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
            android:id="@+id/tvPopupStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dialog_title_margin_top"
            android:text="@string/loading_in_progress"
            android:textColor="@color/colorText"
            android:textSize="@dimen/title_textsize"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="@dimen/list_token_animation_size"
            android:layout_height="@dimen/list_token_animation_size"
            android:layout_marginTop="@dimen/list_token_animation_margin_top"
            android:scaleType="centerCrop"
            app:lottie_rawRes="@raw/loading_animation"/>

    <TextView
            android:id="@+id/tvRefresh"
            style="@style/CTAButton"
            android:layout_width="@dimen/dialog_cta_width"
            android:layout_marginTop="@dimen/dialog_cta_margin_top"
            android:background="@drawable/btn_primary"
            android:text="@string/refresh"/>

    <TextView
            android:id="@+id/tvClose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_close_btn_height"
            android:layout_marginTop="@dimen/dialog_close_btn_margin_top"
            android:layout_marginBottom="@dimen/dialog_close_btn_margin_bottom"
            android:gravity="center"
            android:text="@string/close"/>

</LinearLayout>