<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="@dimen/account_header_height">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/account_balance_title"
                  android:layout_centerInParent="true"
                  android:id="@+id/tvAccountBalanceTitle"
                  android:fontFamily="sans-serif-light"
                  android:textSize="@dimen/account_header_title_textsize"
                  android:textColor="@android:color/white"
                  android:layout_height="wrap_content"/>


        <TextView android:layout_width="wrap_content"
                  android:text="@string/account_amount_eth"
                  android:id="@+id/tvAccountEth"
                  android:layout_marginTop="@dimen/account_header_eth_balance_margintop"
                  android:layout_centerHorizontal="true"
                  android:fontFamily="sans-serif"
                  android:layout_below="@+id/tvAccountBalanceTitle"
                  android:textSize="@dimen/account_header_eth_balance_textsize"
                  android:textColor="@android:color/white"
                  android:layout_height="wrap_content"/>

        <ImageView android:layout_width="wrap_content"
                   android:src="@drawable/eth"
                   android:layout_marginTop="@dimen/account_header_eth_logo_margintop"
                   android:layout_marginBottom="@dimen/account_header_eth_logo_marginbottom"
                   android:layout_toRightOf="@+id/tvAccountEth"
                   android:layout_height="wrap_content"
                   android:layout_alignTop="@+id/tvAccountEth"
                   android:layout_alignBottom="@+id/tvAccountEth"
                   android:layout_marginLeft="@dimen/account_header_eth_logo_margin_left"/>

    </RelativeLayout>


    <LinearLayout
            android:id="@+id/llErcToken"
            android:layout_width="@dimen/list_token_width_width"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:layout_marginTop="@dimen/account_body_erc20tokens_margintop"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/account_erc20_balance"
                  android:fontFamily="sans-serif-light"
                  android:textSize="@dimen/account_body_erc20tokens_title_textsize"
                  android:textColor="@android:color/black"
                  android:layout_height="wrap_content"/>


        <TextView android:layout_width="wrap_content"
                  android:text="@string/account_amount_eth"
                  android:id="@+id/tvErc20Balance"
                  android:layout_marginTop="@dimen/account_body_erc20tokens_balance_margintop"
                  android:fontFamily="sans-serif"
                  android:textSize="@dimen/account_body_erc20tokens_balance_textsize"
                  android:textColor="@android:color/black"
                  android:layout_height="wrap_content"/>


        <TextView
                android:id="@+id/tvViewMore"
                style="@style/CTAButton"
                android:layout_width="@dimen/list_token_width_width"
                android:layout_marginTop="@dimen/account_body_erc20tokens_cta_margintop"
                android:background="@drawable/btn_primary"
                android:text="@string/view_more"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/llState"
            android:layout_width="@dimen/list_token_width_width"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            android:layout_marginTop="@dimen/account_state_margintop"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tvStateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/loading_in_progress"
                android:textColor="@color/colorText"
                android:textSize="@dimen/title_textsize"/>

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="@dimen/list_token_animation_size"
                android:layout_height="@dimen/list_token_animation_size"
                android:layout_marginTop="@dimen/list_token_animation_margin_top"
                android:scaleType="centerCrop"
                app:lottie_rawRes="@raw/loading_animation"/>

    </LinearLayout>


</FrameLayout>